# diri-c

./: .gitmodules  CMakeLists.txt  README.md
scripts/: install.sh
src/: main.c
